- master:
    - changed InferenceModel.fit: added show_progress and return_diagnostics arguments, removed model specific kwargs (breaking)
        NapsuMQModel.fit and DPVIModel.fit changed accordingly
    - DPVIResult no longer contains the final ELBO from model fitting (breaking)
        this is now returned as diagnostic information from DPVIModel.fit if return_diagnostics=True
    - fixed: reused RNG key in NAPSU-MQ data sampling
    - added integers_handler to DataDescription.from_dataframe
        to determine how integer typed columns are handled
    - changed NapsuMqModel.fit to reject integer typed columns (all values must be categorical)
    - added NapsuMQInferenceConfig to better encapsulate configuration of the NapsuMQ algorithm (breaking)

- 1.0.0:
    - introducing new API centered around twinify.InferenceModel, twinify.InferenceResult
    - added NAPSU-MQ noise aware data generation approach
    - made interfaces for custom NumPyro models more expressive:
        - model functions can now sample any way they want, simply need to return
            generated data as a single concatenated array
        - preprocess functions must return a single DataFrame containing the
            preprocessed data.
        - postprocess functions now get a single DataFrame of samples with
            correct column names. Must return a single DataFrame containing
            the postprocessed data.
        - instead of a model function, custom models may define a model_factory
            function that is provided arguments from the command line and returns
            a model function.
    - added twinify-tools command as entry point for various utilites.
    - added check-model subcommand for twinify-tools to check whether a given
        NumPyro model works with twinify.
    - twinify now uses cryptographic randomness for DP perturbations.

- 0.1.2: Fix: jaxlib version now constrained for working installation (no
further changes from 0.1.1).